--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,14 @@ body {
     font-family: Trirong, sans-serif;
     font-weight: 700;
     color: #f5f5f5;
-    background-color: #000;
+    background-color: rgb(0, 0, 0);
 }
 
 /* Headings and logo */
 
 h1, h2 {
    font-family: Syncopate, sans-serif;
-   color: blue;
+   color: #0000ff;
    
    
 }
@@ -99,3 +99,16 @@ p {
     top: 550px;
     
 }
+
+/* Youtube link */
+
+#youtube-lnk {
+   padding-left: 500px;
+}
+
+#youtube-txt{
+    position: relative;
+    margin: 20px;
+    padding-left: 300px;
+}
+    
