--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,12 +103,39 @@ p {
 /* Youtube link */
 
 #youtube-lnk {
-   padding-left: 500px;
+   padding-left: 550px;
 }
 
 #youtube-txt{
     position: relative;
     margin: 20px;
-    padding-left: 300px;
+    padding-left: 350px;
 }
+
+/* Footer */
     
+footer {
+    height: 170px;
+    background-color: #0000ff;   
+}
+
+.footer-header {
+    text-align: center;
+    padding-top: 20px;
+    color: #f5f5f5;
+}
+
+#social-media {
+    text-align: center;
+    margin-top: 15px;
+}
+
+#social-media > li {
+    display: inline;
+}
+
+#social-media i {
+    font-size: 170%;
+    margin: 15px;
+    color: #f5f5f5;
+}
