--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,3 +139,64 @@ footer {
     margin: 15px;
     color: #f5f5f5;
 }
+
+/* Logo and nav links gallery page */
+
+.logo-gallery {
+    float: left;
+    font-size: 250%;
+    margin-left: 40px;
+    border-bottom: 5px solid;
+    padding-top: 20px;
+
+}
+
+.nav-gallery {
+        font-size: 115%;
+        list-style: none;
+        float: right;
+    }
+    
+    
+    .nav-gallery li {
+        float: left;
+        margin: 0 45px;
+        padding-top: 20px; 
+        
+    }
+
+    .nav-gallery a {
+        text-decoration: none;
+    }
+    
+    .nav-gallery a:hover {
+        border-bottom: 1px solid;
+    }
+    
+    #active {
+        border-bottom: 1px solid;
+    }
+
+
+    /* Gallery photo */
+
+#gallery-photo {
+    clear: both;
+    padding-top: 50px;
+
+}
+
+#ai-face {
+    padding-left: 300px;
+    column-count: 1;   
+}
+
+#center-image {
+    margin: 0 150px;
+}
+
+#ai-painting {
+    margin-top: 20px;
+    padding-left: 300px;
+    column-count: 1;
+}
