Add core structure to register page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ h1, h2 {
 /* header image */
 
 #header-image {
-    height: 300px;
+    min-height: 300px;
     width: 100%;
     background: url('../css/images/main-header-image.jpg') no-repeat center center;
     background-size: cover;
@@ -74,7 +74,7 @@ h1, h2 {
 /* AI info */
 
 .ai-info {
-    height: 150px;
+    min-height: 150px;
     padding: 110px 10px 0 50px;
     
 }
@@ -115,7 +115,7 @@ p {
 /* Footer */
     
 footer {
-    height: 170px;
+    max-height: 170px;
     background-color: #0000ff;   
 }
 
@@ -206,3 +206,7 @@ footer {
 #gallery-txt > p {
     padding-top: 20px;
 }
+
+/* Media queries */
+
+@media screen and (max-width: 12)
