--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,8 +305,6 @@ footer {
 @media screen and (max-width: 1245px) {
     #right-image {   
     position: static;
-    
-    
     }
 
     #left-text p {
@@ -321,8 +319,8 @@ footer {
         }
 
         #youtube-txt{
-            margin: 20px;
-            padding-left: 30px;
+            margin: 10px;
+            padding-left: 5px;
         }
     }
 
@@ -335,13 +333,20 @@ footer {
         padding-top: 0px;
     }
     .nav {
-        clear: left;
+        position: absolute;
+        font-size: 115%;
+        list-style: none;
+        float: left;    
+    }
+
+    .nav li {
+        position: relative;
         float: left;
-        margin: 0 0 0
-        
+        margin: 350px 40px 0
     }
 
     h1 {
         float: left;
+        margin-top: 20px;
     }
 }
