--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,11 +342,29 @@ footer {
     .nav li {
         position: relative;
         float: left;
-        margin: 350px 40px 0
+        margin: 350px 40px 0;
     }
 
-    h1 {
-        float: left;
-        margin-top: 20px;
-    }
+
+    #left-txt p {
+        text-align: center;
+        margin-left: 200px;
+        font-size: 120%; 
+        width: 100%;
+     }
+
+     #left-txt-bottom p {
+        text-align: center;
+        margin: 0 25px;
+     }
+        
+     #right-image {
+        margin: 0 220px 0 200px;
+        padding: 0 150px 50px 0;
+     }
+     
+     #youtube-lnk {
+        margin: 0 200px 0 180px;
+     }
+    
 }
