--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@ body {
     font-weight: 700;
     color: #f5f5f5;
     background-color: rgb(0, 0, 0);
+    
+    
 }
 
 /* Headings and logo */
@@ -322,6 +324,10 @@ footer {
     margin: 0 0 20px 80px;
     }
 
+    #left-txt-bottom {
+        padding-right: 60px;
+    }
+
     #youtube-lnk {
             padding-left: 70px;
         }
@@ -334,7 +340,7 @@ footer {
 
 
 
-/* For medium screen sizes from 1007px wide and down */
+/* For medium screen size from 1007px wide and down */
 
 @media screen and (max-width: 1007px) {
     .logo {
@@ -375,3 +381,51 @@ footer {
      }
     
 }
+
+/* For small screen size from 670px wide and down */
+
+@media screen and (max-width: 670px) {
+    .logo {
+        padding-top: 0px;
+        font-size: 120%;
+    }
+
+    .nav {
+        position: absolute;
+        font-size: 115%;
+        list-style: none;
+        float: left;    
+    }
+
+    .nav li {
+        position: relative;
+        float: left;
+        margin: 350px 10px 0 ;
+    }
+
+    .ai-info h1 {
+        margin-left: 200px;
+    }
+
+    #left-txt p {
+        text-align: center;
+        margin-left: 180px;
+        font-size: 130%; 
+        width: 100%;
+     }
+
+     #right-image {
+        margin: 0 50px 0 ;
+        
+     }
+
+     #left-txt-bottom p {
+        padding-left: 200px;   
+     }
+
+     #youtube-lnk {
+        
+        
+     }
+}
+
