--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,7 +192,7 @@ footer {
 
 #ai-face {
     padding-left: 300px;
-    column-count: 1;   
+       
 }
 
 #center-image {
@@ -206,7 +206,7 @@ footer {
 #ai-painting {
     margin-top: 20px;
     padding-left: 300px;
-    column-count: 1;
+    
 }
 
 /* Gallery text */
@@ -332,6 +332,25 @@ footer {
             margin: 10px;
             padding-left: 5px;
         }
+
+        #center-image {
+            margin: 0 80px;
+        }
+        
+        #center-image-two {
+            margin: 0 80px;
+        }
+
+        #ai-face {
+        padding-left: 200px;      
+        }
+
+        #ai-painting {
+            margin-top: 20px;
+            padding-left: 200px;
+            
+        }
+
     }
 
 
@@ -384,23 +403,27 @@ footer {
     .logo {
         padding-top: 0px;
         font-size: 120%;
+        
     }
 
     .nav {
         position: absolute;
         font-size: 115%;
         list-style: none;
-        float: left;    
+        float: left;
+            
     }
 
     .nav li {
         position: relative;
         float: left;
         margin: 350px 10px 0 ;
+        
     }
 
     .ai-info h1 {
         margin-left: 200px;
+        
     }
 
     #left-txt p {
@@ -408,25 +431,27 @@ footer {
         margin-left: 180px;
         font-size: 130%; 
         width: 100%;
+       
      }
 
      #right-image {
         margin: 0 40px 0;
-        
-        
+        float: left;
      }
 
      #left-txt-bottom p {
-        padding-left: 150px;   
+        padding-left: 150px;
+           
      }
 
      #youtube-lnk {
         margin: 0 50px 0;
+        
      }
 
      #youtube-txt p {
-        text-align: center;
-        padding-left: 150px;
+        padding-left: 50px;
+        
      }
 }
 
