--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,12 +478,11 @@ footer {
         }    
 }
 
-/* For small screen size from 520px wide and up */
+/* For small screen size from 520px wide and down */
 
 @media screen and (max-width: 520px) {
     .nav-gallery {
-        position: absolute;
-        font-size: 80%;
+        font-size: 130%;
         list-style: none;
         float: left;
         margin-left: 20px;       
@@ -496,13 +495,13 @@ footer {
     }
 }
 
-/* For small screen size from 365px wide and up */
+/* For small screen size from 365px wide and down */
 
 @media screen and (max-width: 365px) {
 
     .nav-gallery {
     position: absolute;
-    font-size: 80%;
+    font-size: 100%;
     list-style: none;
     float: left;
     margin-left: 20px;       
@@ -510,8 +509,8 @@ footer {
 
 .nav-gallery li {
     position: relative;
-    float: left;
-    margin: 100px 10px 0 ;    
+    
+        
 }
 
 }
