--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Syncopate:wght@700&family=Trirong:wght@700&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     border: none;
@@ -11,17 +11,18 @@ body {
     font-weight: 700;
     color: #f5f5f5;
     background-color: rgb(0, 0, 0);
-    
-    
+
+
 }
 
 /* Headings and logo */
 
-h1, h2 {
-   font-family: Syncopate, sans-serif;
-   color: #0000ff;
-   
-   
+h1,
+h2 {
+    font-family: Syncopate, sans-serif;
+    color: #0000ff;
+
+
 }
 
 .logo {
@@ -38,13 +39,13 @@ h1, h2 {
     font-size: 115%;
     list-style: none;
     float: right;
-    
+
 }
 
 
 .nav li {
     float: left;
-    margin: 400px 65px 0    
+    margin: 400px 65px 0
 }
 
 .logo {
@@ -71,7 +72,7 @@ h1, h2 {
     width: 100%;
     background: url('../css/images/main-header-image.jpg') no-repeat center center;
     background-size: cover;
-    
+
 }
 
 /* AI info */
@@ -79,47 +80,47 @@ h1, h2 {
 .ai-info {
     min-height: 150px;
     padding: 110px 10px 0 50px;
-    
+
 }
 
 #left-txt {
-    
-     width: 50%;
-          
+
+    width: 50%;
+
 }
 
 p {
-   margin-left: 40px;
-   font-size: 130%; 
-   margin-bottom: 100px; 
+    margin-left: 40px;
+    font-size: 130%;
+    margin-bottom: 100px;
 }
 
 /* Images homepage */
 
-#right-image{
+#right-image {
     position: absolute;
     left: 950px;
     top: 550px;
-    
+
 }
 
 /* Youtube link */
 
 #youtube-lnk {
-   padding-left: 550px;
+    padding-left: 550px;
 }
 
-#youtube-txt{
+#youtube-txt {
     position: relative;
     margin: 20px;
     padding-left: 350px;
 }
 
 /* Footer */
-    
+
 footer {
     max-height: 170px;
-    background-color: #0000ff;   
+    background-color: #0000ff;
 }
 
 .footer-header {
@@ -133,7 +134,7 @@ footer {
     margin-top: 15px;
 }
 
-#social-media > li {
+#social-media>li {
     display: inline;
 }
 
@@ -155,34 +156,34 @@ footer {
 }
 
 .nav-gallery {
-        font-size: 115%;
-        list-style: none;
-        float: right;
-    }
-    
-    
-    .nav-gallery li {
-        float: left;
-        margin: 0 45px;
-        padding-top: 20px; 
-        
-    }
-
-    .nav-gallery a {
-        text-decoration: none;
-        color: #f5f5f5;
-    }
-    
-    .nav-gallery a:hover {
-        border-bottom: 1px solid;
-    }
-    
-    #active {
-        border-bottom: 1px solid;
-    }
+    font-size: 115%;
+    list-style: none;
+    float: right;
+}
 
 
- /* Gallery photo */
+.nav-gallery li {
+    float: left;
+    margin: 0 45px;
+    padding-top: 20px;
+
+}
+
+.nav-gallery a {
+    text-decoration: none;
+    color: #f5f5f5;
+}
+
+.nav-gallery a:hover {
+    border-bottom: 1px solid;
+}
+
+#active {
+    border-bottom: 1px solid;
+}
+
+
+/* Gallery photo */
 
 #gallery-photo {
     clear: both;
@@ -192,7 +193,7 @@ footer {
 
 #ai-face {
     padding-left: 300px;
-       
+
 }
 
 #center-image {
@@ -206,12 +207,12 @@ footer {
 #ai-painting {
     margin-top: 20px;
     padding-left: 300px;
-    
+
 }
 
 /* Gallery text */
 
-#gallery-txt > p {
+#gallery-txt>p {
     padding-top: 20px;
 }
 
@@ -222,7 +223,7 @@ footer {
     height: 900px;
     background: url('../css/images/reg-image.jpg') no-repeat center center;
     background-size: cover;
-    
+
 }
 
 .logo-register {
@@ -243,8 +244,8 @@ footer {
 .nav-register li {
     float: left;
     margin: 0 45px;
-    padding: 20px; 
-    
+    padding: 20px;
+
 }
 
 .nav-register a {
@@ -304,54 +305,51 @@ footer {
 
 /* For larger size screens from 1245px wide and up */
 
-@media screen and (min-width: 1245px) {
-
-
-}
+@media screen and (min-width: 1245px) {}
 
 /* For larger to medium size screens from 1200px wide and down */
 
 @media screen and (max-width: 1200px) {
-    
+
     .nav li {
         position: relative;
         float: left;
         margin: 350px 30px 0;
     }
 
-    #right-image {   
-    position: static;
-    margin: 0 0 20px 80px;
+    #right-image {
+        position: static;
+        margin: 0 0 20px 80px;
     }
 
     #youtube-lnk {
-            padding-left: 70px;
-        }
+        padding-left: 70px;
+    }
 
-        #youtube-txt{
-            margin: 10px;
-            padding-left: 5px;
-        }
+    #youtube-txt {
+        margin: 10px;
+        padding-left: 5px;
+    }
 
-        #center-image {
-            margin: 0 80px;
-        }
-        
-        #center-image-two {
-            margin: 0 80px;
-        }
+    #center-image {
+        margin: 0 80px;
+    }
 
-        #ai-face {
-        padding-left: 200px;      
-        }
+    #center-image-two {
+        margin: 0 80px;
+    }
 
-        #ai-painting {
-            margin-top: 20px;
-            padding-left: 200px;
-            
-        }
+    #ai-face {
+        padding-left: 200px;
+    }
+
+    #ai-painting {
+        margin-top: 20px;
+        padding-left: 200px;
 
     }
+
+}
 
 
 
@@ -361,11 +359,12 @@ footer {
     .logo {
         padding-top: 0px;
     }
+
     .nav {
         position: absolute;
         font-size: 115%;
         list-style: none;
-        float: left;    
+        float: left;
     }
 
     .nav li {
@@ -377,19 +376,19 @@ footer {
 
     #left-txt p {
         text-align: center;
-        font-size: 130%; 
+        font-size: 130%;
         width: 100%;
-     }
+    }
 
-     #left-text-bottom {
+    #left-text-bottom {
         padding-left: 120px;
-     }
- 
-     #youtube-lnk {
-        margin: 0 200px 0 160px;
-     }
+    }
 
-     #center-image {
+    #youtube-lnk {
+        margin: 0 200px 0 160px;
+    }
+
+    #center-image {
         margin: 0 20px;
     }
 
@@ -399,15 +398,15 @@ footer {
 
     #ai-face {
         padding-left: 50px;
-        column-count: 1;      
-        }
+        column-count: 1;
+    }
 
     #ai-painting {
         margin-top: 20px;
         padding-left: 50px;
         column-count: 1;
-        }    
-    
+    }
+
 }
 
 /* For small screen size from 670px wide and down */
@@ -416,7 +415,7 @@ footer {
     .logo {
         padding-top: 0px;
         font-size: 120%;
-        
+
     }
 
     .nav {
@@ -424,58 +423,58 @@ footer {
         font-size: 115%;
         list-style: none;
         float: left;
-            
+
     }
 
     .nav li {
         position: relative;
         float: left;
-        margin: 350px 10px 0 ;
-        
+        margin: 350px 10px 0;
+
     }
 
     .ai-info h1 {
         margin-left: 200px;
-        
+
     }
 
     #left-txt p {
         text-align: center;
-        font-size: 130%; 
-        width: 100%;  
-     }
+        font-size: 130%;
+        width: 100%;
+    }
 
-     #left-txt-bottom p {
+    #left-txt-bottom p {
         width: 50%;
-     }
+    }
 
-     #right-image {
+    #right-image {
         margin: 0px;
         padding: 0px;
-     }
+    }
 
-     #youtube-lnk {
+    #youtube-lnk {
         margin-left: 0px;
-        
-     }
 
-     #youtube-txt p {
+    }
+
+    #youtube-txt p {
         width: 50%;
-        
-     }
 
-     #ai-face {
+    }
+
+    #ai-face {
         padding-left: 50px;
-        column-count: 1;      
-        }
+        column-count: 1;
+    }
 
     #center-image {
         margin: 0;
-        }
+    }
 
     #center-image-two {
         margin: 0;
-        }    
+    }
 }
 
 /* For small screen size from 640px wide and down */
@@ -484,12 +483,13 @@ footer {
     .nav-register {
         font-size: 115%;
         list-style: none;
-        float: left;        
+        float: left;
     }
+
     .nav-register li {
         position: relative;
         float: left;
-        margin: 100px 5px 0;    
+        margin: 100px 5px 0;
     }
 }
 
@@ -500,13 +500,13 @@ footer {
         font-size: 130%;
         list-style: none;
         float: left;
-        margin-left: 20px;       
+        margin-left: 20px;
     }
 
     .nav-gallery li {
         position: relative;
         float: left;
-        margin: 100px 10px 0;    
+        margin: 100px 10px 0;
     }
 }
 
@@ -515,17 +515,17 @@ footer {
 @media screen and (max-width: 365px) {
 
     .nav-gallery {
-    position: absolute;
-    font-size: 100%;
-    list-style: none;
-    float: left;
-    margin-left: 20px;       
-}
+        position: absolute;
+        font-size: 100%;
+        list-style: none;
+        float: left;
+        margin-left: 20px;
+    }
 
-.nav-gallery li {
-    position: relative;
-            
-}
+    .nav-gallery li {
+        position: relative;
+
+    }
 
 }
 
@@ -535,32 +535,33 @@ footer {
 
     #right-image {
         overflow: hidden;
-        
+
     }
+
     #right-image {
         margin: 0px;
-        padding: 0px;  
-     }
+        padding: 0px;
+    }
 
-     iframe {
+    iframe {
         width: 100%;
         height: 250px;
-     }
+    }
 
-     #youtube-lnk {
+    #youtube-lnk {
         margin: 0px;
         padding: 0px;
-      
-     }
 
     }
 
-    /* For small screen size from 400px wide and down */
-    @media screen and (max-width: 400px) {
-        .nav-register {
-            font-size: 78%;
-            list-style: none;
-            float: left;          
-        }
-       
+}
+
+/* For small screen size from 400px wide and down */
+@media screen and (max-width: 400px) {
+    .nav-register {
+        font-size: 78%;
+        list-style: none;
+        float: left;
     }
+
+}
