--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ h2 {
 #header-image {
     min-height: 320px;
     width: 100%;
-    background: url('../css/images/main-header-image.jpg') no-repeat center center;
+    background: url('../images/main-header-image.jpg') no-repeat center center;
     background-size: cover;
 
 }
@@ -221,7 +221,7 @@ footer {
 .form-section {
     clear: both;
     height: 900px;
-    background: url('../css/images/reg-image.jpg') no-repeat center center;
+    background: url('../images/reg-image.jpg') no-repeat center center;
     background-size: cover;
 
 }
